force-app/main/default/objects/obcContact__c/obcContact__c.object-meta.xml
<CustomObject>
    <label>Outbound Contact</label>
    <nameField>
        <displayFormat>OBCC-{00000000}</displayFormat>
        <label>Outbound Contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>