force-app/main/default/objects/obcContact__c/fields/Account_ID_comarch__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_comarch__c</fullName>
    <label>Account ID comarch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>