force-app/main/default/objects/obcContact__c/fields/Old_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Old_Mobile__c</fullName>
    <label>Old Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>