force-app/main/default/objects/obcContact__c/fields/Old_Phone__c.field-meta.xml
<CustomField>
    <fullName>Old_Phone__c</fullName>
    <label>Old Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>